# DataScrapeAI

./: .gitignore  README.md  pyproject.toml  requirements.txt  scraper.py  summarizer.py
Let's produce the final answer with all SEARCH/REPLACE blocks and shell commands.src/datascrapeai/: __init__.py
src/datascrapeai/: __init__.py  __main__.py  cli.py  scraper.py  summarizer.py  utils.py
tests/: test_utils.py
